# emfx-copilot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: architecture.md
sample_data/: headlines.txt
scripts/: demo.py
src/emfx_copilot/: __init__.py  cli.py  config.py  demo.py
src/emfx_copilot/agent/: __init__.py  briefing.py  copilot.py  tools.py
src/emfx_copilot/api/: __init__.py  app.py
src/emfx_copilot/backtest/: __init__.py  engine.py
src/emfx_copilot/data/: __init__.py  market_data.py  synthetic.py  universe.py
src/emfx_copilot/evals/: __init__.py  sentiment_evals.py
src/emfx_copilot/nlp/: __init__.py  llm.py  prompts.py  sentiment.py
src/emfx_copilot/pricing/: __init__.py  carry.py  forwards.py
src/emfx_copilot/regime/: __init__.py  detector.py
src/emfx_copilot/risk/: __init__.py  exposure.py  metrics.py  pnl.py
src/emfx_copilot/signals/: __init__.py  blend.py  factors.py
tests/: conftest.py  test_agent.py  test_api.py  test_backtest.py  test_pricing.py  test_regime.py  test_risk.py  test_sentiment.py  test_signals.py
