[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "emfx-copilot"
version = "0.1.0"
description = "An AI co-pilot for a Currencies & Emerging Markets (EM FX) trading desk: LLM/agent market intelligence fused with quant carry/momentum signals, NDF/forward pricing, and a risk engine."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Victor Vo" }]
keywords = ["emerging-markets", "fx", "trading", "quant", "llm", "agent", "ndf", "risk"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Financial and Insurance Industry",
    "Topic :: Office/Business :: Financial :: Investment",
]

# Core deps are intentionally light so the whole thing runs offline with a
# deterministic mock LLM (no API key, no network). Heavy/optional integrations
# live in extras below.
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
# Real LLM provider (the desk co-pilot calls Claude via the official SDK).
llm = ["anthropic>=0.49"]
# Serve the analytics as an HTTP API.
api = ["fastapi>=0.110", "uvicorn>=0.29", "httpx>=0.27"]
# Developer tooling.
dev = ["pytest>=8.0", "pytest-cov>=5.0", "ruff>=0.5", "httpx>=0.27"]
all = ["emfx-copilot[llm,api,dev]"]

[project.scripts]
emfx = "emfx_copilot.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/emfx_copilot"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM"]
ignore = ["E501"]  # line length handled by formatter; long data tables are fine

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
filterwarnings = ["ignore::DeprecationWarning"]
